samples/_failures_safe/1761279875_026a49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec549bef.c:157:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  157 | void init_
      | ^~~~
